[tool.poetry]
name = "ask_me_anything"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.8"
pandas = "~1.2.4"
requests = "~2.25.1"
tensorflow = "~2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
