[tool.poetry]
name = "ask_me_anything"
version = "0.2.0"
description = ""
authors = ["sbadecker <sba.decker@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7.8"
pandas = "~1.2.4"
requests = "~2.25.1"
tensorflow = "~2.4.1"
Flask = "~1.1.2"
pydantic = "~1.8.1"
google-cloud-secret-manager = "~2.0.0"
google-api-core = "~1.28.0"
farm-haystack = "~0.9.0"
ipykernel = "^5.5.5"
gunicorn = "^20.1.0"
google-cloud-storage = "^1.38.0"
notebook = "^6.4.0"
faiss-cpu = "1.7.0"
pg8000 = "^1.20.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2.4"
bandit = "~1.7.0"
mypy = "~0.812"
flake8 = "~3.9.1"
isort = "~5.8.0"
autopep8 = "~1.5.7"

[tool.autopep8]
line-length=99
target-version=['py37']

[tool.isort]
multi_line_output = 3
line_length = 99
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
